# deepfried

./: .gitmodules  deepfried.cabal
main/: bot.hs
src/DeepFried/: Env.hs  Error.hs  Image.hs  Stream.hs
