
name:                deepfried
version:             0.1.0.0
synopsis:            Twitter bot
homepage:            https://github.com/thumphries/deepfried
author:              Tim Humphries
maintainer:          tim@utf8.me

build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable deepfried
  hs-source-dirs:      src
  default-language:    Haskell2010
  main-is:             ../main/bot.hs

  other-modules:
                       DeepFried.Env
                       DeepFried.Stream

  build-depends:       base                 >= 4.8     && <4.9
                     , ambiata-x-eithert
                     , basic-prelude        == 0.5.*
                     , bytestring           == 0.10.*
                     , conduit              == 1.2.*
                     , lens
                     , resourcet
                     , text                 == 1.2.*
                     , twitter-conduit      == 0.2.*

